Break long words and prevent overflow

--- a/src/components/UI/Typography.module.scss
+++ b/src/components/UI/Typography.module.scss
@@ -1,6 +1,6 @@
-/*  .root {
-    width: inherit; 
-} */
+.root {
+  @include ow;
+}
 
 .fullWidth {
   width: inherit; // Todo: Find more appropriate name
